[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_sciassist"
version = "0.0.1"
authors = [
  { name="NUS-Wing", email="dyx@example.com" },
]
description = "A toolkit for scidocs"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.11.1",
    "chardet==3.0.4",
    "datasets==2.2.2",
    "hydra-core==1.2.0",
    "matplotlib==3.5.2",
    "nltk==3.7",
    "numpy==1.19.2",
    "omegaconf==2.2.2",
    "PyPDF2==2.10.7",
    "python_magic==0.4.27",
    "pytorch_lightning==1.7.1",
    "requests==2.28.1",
    "rich==12.5.1",
    "seaborn==0.11.2",
    "setuptools==63.1.0",
    "torch==1.12.0",
    "torchmetrics==0.9.2",
    "transformers==4.19.4",
    "wandb==0.12.21",
]

[project.urls]
"Homepage" = "https://github.com/WING-NUS/SciAssist"
"Bug Tracker" = "https://github.com/WING-NUS/SciAssist/issues"